# mcp-client-server

./: Dockerfile  README.md  docker-build.sh  mcp.json.example  pyproject.toml  redshift_mcp_server.py
client/: client.py
src/redshift_mcp/: __init__.py  __main__.py  server.py
